fixed styling of the sun with z-index

--- a/src/index.css
+++ b/src/index.css
@@ -78,22 +78,28 @@ h3 {
 }
 
 .intro-heading {
+  position: relative;
   grid-area: 1 / 2 / 2 / 3;
   align-self: end;
   font-size: 3rem;
   margin-bottom: 20px;
+  z-index: 2;
 }
 .intro-text {
+  position: relative;
   grid-area: 2 / 2 / 3 / 3;
   font-size: 1.3rem;
   line-height: 1.6;
+  z-index: 2;
 }
 
 .cece-portrait {
+  position: relative;
   width: 80%;
   border-radius: 100%;
   border: 1px solid var(--yellow);
   background-color: var(--yellow);
+  z-index: 2;
 }
 .sun {
   grid-area: 1 / 1 / 3 / 2;
@@ -118,7 +124,7 @@ h3 {
   left: -150px;
   height: 770px;
   width: 770px;
-  z-index: -1;
+  z-index: 1;
 
   animation-name: spin;
   animation-duration: 200000ms;
